--- a/src/components/CartProduct/CartProduct.module.css
+++ b/src/components/CartProduct/CartProduct.module.css
@@ -101,7 +101,7 @@
     margin: 0;
     padding: 8px 2px 0 0;
   }
-  .price > h3 {
+  .container_price h3 {
     font-size: 24px;
   }
   .price > h4 {
