--- a/src/components/CartProduct/CartProduct.module.css
+++ b/src/components/CartProduct/CartProduct.module.css
@@ -25,7 +25,7 @@
 }
 .container_title {
   padding: 32px 32px 32px 0;
-  /* width: 548px; */
+  max-height: 180px;
 }
 .container_title > h6 {
   margin-right: 32px;
