--- a/src/components/CartProduct/CartProduct.module.css
+++ b/src/components/CartProduct/CartProduct.module.css
@@ -62,6 +62,9 @@
   .container {
     max-width: 550px;
   }
+  .container_title {
+    max-height: none;
+  }
   .container_price {
     flex-direction: column;
   }
