--- a/src/components/CartProduct/CartProduct.module.css
+++ b/src/components/CartProduct/CartProduct.module.css
@@ -22,6 +22,10 @@
   border-bottom-left-radius: 12px;
   object-fit: cover;
   display: block;
+  transition: transform 0.3s;
+}
+.container_image > img:hover {
+  transform: scale(1.05);
 }
 .container_title {
   padding: 32px 32px 32px 0;
@@ -48,6 +52,13 @@
   border: none;
   background: transparent;
   cursor: pointer;
+}
+.x > img {
+  transition: transform 0.3s, filter 0.3s ease;
+}
+.x > img:hover {
+  transform: scale(1.3);
+  filter: drop-shadow(0px 8px 3px rgba(180, 16, 16, 0.8));
 }
 /*-----------------------------------------------------------*/
 @media (max-width: 1320px) {
