--- a/src/components/Categories/Categories.module.css
+++ b/src/components/Categories/Categories.module.css
@@ -8,10 +8,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  transition: transform 0.3s, box-shadow 0.3s ease;
+}
+.card:hover {
+  transform: scale(1.05);
+  opacity: 0.8;
 }
 .card > img {
   border-radius: 12px;
   max-height: 350px;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
 }
 .card > h5 {
   margin-top: 16px;
