--- a/src/components/Description/Description.module.css
+++ b/src/components/Description/Description.module.css
@@ -5,10 +5,10 @@
 .clampedText {
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 3; /* Укажите количество видимых строк */
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
-  max-height: calc(1.3em * 3); /* Количество строк * высота строки */
+  max-height: calc(1.3em * 3);
   font-weight: 400;
   font-size: 16px;
   line-height: 130%;
@@ -37,7 +37,10 @@
   text-decoration: underline;
   text-decoration-skip-ink: none;
   color: #282828;
+  transition: transform 0.3s, text-shadow 0.3s ease;
 }
 .toggleButton:hover {
   text-decoration: underline;
+  transform: scale(1.02);
+  text-shadow: 0px 5px 15px rgba(13, 80, 255, 0.8);
 }
