--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -11,10 +11,24 @@
 .header_logo > a {
   cursor: pointer;
 }
+.header_logo > a > img {
+  border-radius: 50%;
+  transition: transform 0.3s ease, filter 0.3s ease;
+}
+.header_logo > a > img:hover {
+  color: #0d50ff;
+  transform: scale(1.08);
+  filter: drop-shadow(0px 10px 15px rgba(13, 80, 255, 0.8));
+}
 .header_menu {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+}
+.link:hover {
+  color: #0d50ff;
+  transform: scale(1.08);
+  text-shadow: 0px 10px 15px rgba(13, 80, 255, 0.8);
 }
 .link:not(:last-child) {
   margin-right: 32px;
@@ -26,9 +40,7 @@
   line-height: 130%;
   color: #282828;
   cursor: pointer;
-}
-.link:hover {
-  color: #0d50ff;
+  transition: transform 0.3s, text-shadow 0.3s ease;
 }
 .header_cart {
   margin-right: 40px;
@@ -42,7 +54,7 @@
     margin-right: 0px;
   }
   .link {
-    font-size: 24px; /*  Нужно подобрать!!!!!!!!!!!!!!!!!!!!!!!! */
+    font-size: 24px;
   }
   .header_menu {
     display: grid;
