--- a/src/components/Promotions/Promotions.module.css
+++ b/src/components/Promotions/Promotions.module.css
@@ -26,6 +26,12 @@
   background-color: #0d50ff;
   font-family: "Montserrat", sans-serif;
   cursor: pointer;
+  transition: transform 0.4s, box-shadow 0.4s ease;
+}
+.container > button:hover {
+  cursor: pointer;
+  transform: translate(0, -5px);
+  box-shadow: 0px 10px 15px rgb(226, 222, 222);
 }
 /* -----------------------------------------------------------------------------------*/
 @media (max-width: 1024px) {
@@ -58,6 +64,5 @@
     font-size: 16px;
     padding: 8px 28px;
     margin-left: 10px;
-    
   }
 }
