--- a/src/components/Steppers/Stepper.module.css
+++ b/src/components/Steppers/Stepper.module.css
@@ -19,9 +19,12 @@
   justify-content: center;
   height: 58px;
   width: 58px;
+  transition: transform 0.3s, box-shadow 0.3s ease;
 }
 .button:hover {
   background-color: #0d50ff;
+  transform: scale(1.05);
+  box-shadow: 0px 5px 15px rgba(13, 80, 255, 0.8);
 }
 .count {
   flex: 1;
