Подкорректировал стил для смартфона

--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -1,5 +1,6 @@
 .cart_container {
   position: relative;
+  -webkit-tap-highlight-color: transparent;
 }
 .quantity:hover {
   transform: scale(1.2);
