--- a/src/components/CartProduct/CartProduct.module.css
+++ b/src/components/CartProduct/CartProduct.module.css
@@ -55,6 +55,7 @@
 }
 .x > img {
   transition: transform 0.3s, filter 0.3s ease;
+  -webkit-tap-highlight-color: transparent;
 }
 .x > img:hover {
   transform: scale(1.3);
