--- a/src/components/Description/Description.module.css
+++ b/src/components/Description/Description.module.css
@@ -13,6 +13,8 @@
   font-size: 16px;
   line-height: 130%;
   color: #282828;
+  transition: max-height 5.5s ease-in-out;
+  max-height: 70px;
 }
 .fullText {
   overflow: visible;
@@ -37,7 +39,6 @@
   text-decoration: underline;
   text-decoration-skip-ink: none;
   color: #282828;
-  transition: transform 0.3s, text-shadow 0.3s ease;
 }
 .toggleButton:hover {
   text-decoration: underline;
