--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -26,10 +26,12 @@
 .footer_logo > a > img {
   margin-right: 16px;
   cursor: pointer;
-  transition: transform 0.3s;
+  transition: transform 0.3s, box-shadow 0.3s ease;
+  -webkit-tap-highlight-color: transparent;
 }
 .footer_logo > a > img:hover {
   transform: scale(1.1);
+  filter: drop-shadow(0px 5px 15px rgba(13, 80, 255, 0.8));
 }
 .footer_info {
   font-weight: 600;
