--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,6 +7,7 @@
 }
 .header_logo {
   margin-left: 40px;
+  -webkit-tap-highlight-color: transparent;
 }
 .header_logo > a {
   cursor: pointer;
@@ -24,6 +25,9 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+}
+.header_menu > a {
+  -webkit-tap-highlight-color: transparent;
 }
 .link:hover {
   color: #0d50ff;
