--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -14,6 +14,7 @@
   height: 100%;
   object-fit: contain;
   transition: transform 0.3s, box-shadow 0.3s ease;
+  -webkit-tap-highlight-color: transparent;
 }
 .container_image > img:hover {
   transform: scale(1.1);
@@ -32,6 +33,7 @@
   color: #282828;
   margin-bottom: 32px;
   transition: transform 0.3s, box-shadow 0.3s ease;
+  -webkit-tap-highlight-color: transparent;
 }
 .price {
   display: flex;
@@ -46,6 +48,7 @@
   align-self: center;
   margin-right: 16px;
   transition: transform 0.3s, text-shadow 0.3s ease;
+  -webkit-tap-highlight-color: transparent;
 }
 .price > h4 {
   font-weight: 500;
@@ -55,6 +58,7 @@
   color: #8b8b8b;
   align-self: flex-end;
   transition: transform 0.3s, text-shadow 0.3s ease;
+  -webkit-tap-highlight-color: transparent;
 }
 .price > h3:hover {
   transform: scale(1.1);
@@ -78,6 +82,7 @@
 }
 .title_container > h3 {
   transition: transform 0.3s, text-shadow 0.3s ease;
+  -webkit-tap-highlight-color: transparent;
 }
 .discount {
   font-weight: 600;
@@ -90,6 +95,7 @@
   background: #0d50ff;
   align-self: flex-start;
   transition: transform 0.3s, box-shadow 0.3s ease;
+  -webkit-tap-highlight-color: transparent;
 }
 .add_to_cart {
   display: flex;
@@ -118,6 +124,7 @@
   width: 316px;
   cursor: pointer;
   transition: transform 0.3s, box-shadow 0.3s ease;
+  -webkit-tap-highlight-color: transparent;
 }
 .button_cart:hover {
   background: #282828;
