--- a/src/components/BreadCrumbs/BreadCrumbs.module.css
+++ b/src/components/BreadCrumbs/BreadCrumbs.module.css
@@ -40,6 +40,16 @@
   left: -18px;
 }
 @media (max-width: 994px) {
+  .ul_container > li:last-child {
+    width: 220px;
+    padding: 8px;
+    display: flex;
+  }
+  .ul_container > li > a {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
   .line {
     display: none;
   }
@@ -51,11 +61,24 @@
   .ul_container {
     gap: 8px;
   }
+  .line {
+    width: 9px;
+    left: -10px;
+  }
 }
+@media (max-width: 665px) {
+  .ul_container > li:last-child > .line {
+    display: none;
+  }
+}
+
 @media (max-width: 414px) {
   .ul_container > li {
     font-size: 15px;
     min-height: 0;
     padding: 5px;
+  }
+  .line {
+    display: none;
   }
 }
