--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -193,7 +193,7 @@
     flex-wrap: wrap;
   }
   .container_image {
-    width: 586px;
+    width: 96vw;
     height: 516px;
   }
   .title_container {
